New subsection for noise bound analysis for BFV, relocation of the SmallMont subsection

--- a/a01-modulo.tex
+++ b/a01-modulo.tex
@@ -73,7 +73,7 @@ For any integer $x$,
 
 $\Longleftrightarrow a + x = b + k\cdot q + x$
 
-$\Longleftrightarrow a + x = b + x + k\cdot q$ \textcolor{red}{ \text{ }  \# $a+x$ and $b+x$ differ by some multiple of $q$}
+$\Longleftrightarrow a + x = b + x + k\cdot q$ \textcolor{red}{ $\rhd$ $a+x$ and $b+x$ differ by some multiple of $q$}
 
 $\Longleftrightarrow a + x \equiv b + x \bmod q$
 
@@ -83,7 +83,7 @@ $ $
 
 $\Longleftrightarrow a - x = b + k\cdot q - x$
 
-$\Longleftrightarrow a - x = b - x + k\cdot q$  \textcolor{red}{ \text{ }  \# $a-x$ and $b-x$ differ by some multiple of $q$}
+$\Longleftrightarrow a - x = b - x + k\cdot q$  \textcolor{red}{ $\rhd$ $a-x$ and $b-x$ differ by some multiple of $q$}
 
 $\Longleftrightarrow a - x \equiv b - x \bmod q$
 
@@ -93,7 +93,7 @@ $ $
 
 $\Longrightarrow a \cdot x = b \cdot x + k\cdot q \cdot x$
 
-$\Longrightarrow a \cdot x = b \cdot x + k_x\cdot q$ (where $k_x = k \cdot x$)  \textcolor{red}{ \text{ }  \# $a\cdot x$ and $b\cdot x$ differ by some multiple of $q$}
+$\Longrightarrow a \cdot x = b \cdot x + k_x\cdot q$ (where $k_x = k \cdot x$)  \textcolor{red}{ $\rhd$ $a\cdot x$ and $b\cdot x$ differ by some multiple of $q$}
 
 $\Longrightarrow a \cdot x \equiv b \cdot x \bmod q$
 
