--- a/a10-matrix.tex
+++ b/a10-matrix.tex
@@ -300,7 +300,7 @@ There are two types of projections: a vector projection and an orthogonal (i.e.,
 
 \item \textbf{Vector Projection:} Given two vectors $\vec{a}$ and $\vec{b}$ in the same vector space, the vector projection of $\vec{a}$ on $\vec{b}$ is:
 
-$\textsf{Proj}_{\vec{b}}(\vec{a}) = \vec{a}_p  = \dfrac{\vec{a} \cdot \vec{b}}{||b||^2} \vec{b}$ \textcolor{red}{\# where $||\vec{a}_p|| = ||\vec{a}|| \cos \theta$}
+$\textsf{Proj}_{\vec{b}}(\vec{a}) = \vec{a}_p  = \dfrac{\vec{a} \cdot \vec{b}}{||b||^2} \vec{b}$ \textcolor{red}{ $\rhd$ where $||\vec{a}_p|| = ||\vec{a}|| \cos \theta$}
 
 $ $
 
