--- a/a12-modulus-rescaling.tex
+++ b/a12-modulus-rescaling.tex
@@ -244,7 +244,7 @@ $ $
 
 We apply the rescaling of $\dfrac{1}{10}$ as follows: 
 
-$q = 30$ \textcolor{red}{ \# suppose we keep it as the same as before}
+$q = 30$ \textcolor{red}{ $\rhd$ suppose we keep it as the same as before}
 
 $\hat{Delta} = \dfrac{1}{10}\dot\Delta = 1$
 
