--- a/a15-polynomial-interpolation.tex
+++ b/a15-polynomial-interpolation.tex
@@ -21,7 +21,7 @@ $f(X) = \sum\limits_{j=0}^{n}\dfrac{(X-x_0)\cdot(X-x_1)\cdots(X-x_{j-1})\cdot(X-
 
 $ \textcolor{white}{f(X) }= \sum\limits_{j=0}^{n} \left( \prod\limits_{\substack{0 \le k \le n\\ k \ne j}} \dfrac{X - x_k}{x_j - x_k} \cdot y_j\right)$
 
-$ \textcolor{white}{f(X) }= \sum\limits_{j=0}^{n} \ell_j(X) \cdot y_j$ \textcolor{red}{\# where $\ell_j(X) =  \prod\limits_{\substack{0 \le k \le n\\ k \ne j}} \dfrac{X - x_k}{x_j - x_k}$}
+$ \textcolor{white}{f(X) }= \sum\limits_{j=0}^{n} \ell_j(X) \cdot y_j$ \textcolor{red}{ $\rhd$ where $\ell_j(X) =  \prod\limits_{\substack{0 \le k \le n\\ k \ne j}} \dfrac{X - x_k}{x_j - x_k}$}
 
 $ $
 
