--- a/b05-glev.tex
+++ b/b05-glev.tex
@@ -34,7 +34,7 @@ $ $
 
 $= \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^1}M\right) + \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^2}M\right) + \gap{$\cdots$} + \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^l}M\right)$ 
 
-$= \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^1}M + \dfrac{q}{\beta^2}M + \gap{$\cdots$} + \dfrac{q}{\beta^l}M \right) $ \textcolor{red}{\# We will prove this step later  in \autoref{sec:glwe-add-cipher}}
+$= \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^1}M + \dfrac{q}{\beta^2}M + \gap{$\cdots$} + \dfrac{q}{\beta^l}M \right) $ \textcolor{red}{ $\rhd$ We will prove this step later  in \autoref{sec:glwe-add-cipher}}
 
 $= \textsf{GLWE}_{S, \sigma}(M)$
 
