--- a/c01-glwe-add-cipher.tex
+++ b/c01-glwe-add-cipher.tex
@@ -48,7 +48,7 @@ $B^{\langle 3 \rangle} = B^{\langle 1 \rangle} + B^{\langle 2 \rangle}$
 \item Derive the following: \\
 $B^{\langle 3 \rangle} = B^{\langle 1 \rangle} + B^{\langle 2 \rangle}$ \\
 $ = \sum\limits_{i=0}^{k-1}{(A_i^{\langle 1 \rangle} \cdot S_i)} + \Delta \cdot M^{\langle 1 \rangle} + E^{\langle 1 \rangle} + \sum\limits_{i=0}^{k-1}{(A_i^{\langle 2 \rangle} \cdot S_i)} + \Delta \cdot M^{\langle 2 \rangle} + E^{\langle 2 \rangle}$ \\ 
-$= \sum\limits_{i=0}^{k-1}{((A_i^{\langle 1 \rangle} + A_i^{\langle 2 \rangle}) \cdot S_i)} + \Delta \cdot (M^{\langle 1 \rangle} + M^{\langle 2 \rangle}) + (E^{\langle 1 \rangle} + E^{\langle 2 \rangle})$ \textcolor{red}{\# commutative and distributive rules} \\
+$= \sum\limits_{i=0}^{k-1}{((A_i^{\langle 1 \rangle} + A_i^{\langle 2 \rangle}) \cdot S_i)} + \Delta \cdot (M^{\langle 1 \rangle} + M^{\langle 2 \rangle}) + (E^{\langle 1 \rangle} + E^{\langle 2 \rangle})$ \textcolor{red}{ $\rhd$ commutative and distributive rules} \\
 $= \sum\limits_{i=0}^{k-1}{(A_i^{\langle 3 \rangle} \cdot S_i)} + \Delta \cdot (M^{\langle 1 \rangle} + M^{\langle 2 \rangle}) + E^{\langle 3 \rangle}$ \\
 \item Since $B^{\langle 3 \rangle} = \sum\limits_{i=0}^{k-1}{(A_i^{\langle 3 \rangle} \cdot S_i)} + \Delta \cdot (M^{\langle 1 \rangle} + M^{\langle 2 \rangle}) + E^{\langle 3 \rangle}$, 
 
